tests/reject/explicit_noarg.hi
fn empty() -> [$T]:
    return []T
fn main():
    xs := empty()
    println(str(len(xs)))
